# Solve_Fluid

./: LICENSE  README.md
Euler_1D/: .gitignore  Advection.cpp  CMakeLists.txt  CipCsl3.cpp  Fluid1D.cpp  Fluid1D.h  FluidInitialize.cpp  FluidInitialize.h  global_definitions.h  main.cpp
Euler_2D/: Advection.cpp  AdvectionX.cpp  AdvectionY.cpp  CMakeLists.txt  CipCsl3.cpp  Fluid2D.cpp  Fluid2D.h  FluidInitialize.cpp  FluidInitialize.h  Vector2D.cpp  Vector2D.h  advec.diff  global_definitions.h  main.cpp
Euler_3D/: Advection.cpp  Advection.h  AdvectionX.cpp  AdvectionX.h  AdvectionY.cpp  AdvectionY.h  AdvectionZ.cpp  AdvectionZ.h  BoundaryConditions.h  BoundaryConditionsX.cpp  BoundaryConditionsX.h  BoundaryConditionsY.cpp  BoundaryConditionsY.h  BoundaryConditionsZ.cpp  BoundaryConditionsZ.h  CMakeLists.txt  CipCsl3.cpp  CipCsl3.h  Fluid3D.cpp  Fluid3D.h  Fluid3DMain.h  FluidInitialize.cpp  FluidInitialize.h  FluidQuantites.h  Initialize.cpp  Initialize.h  NewDt.cpp  NewDt.h  OutflowBoundary.cpp  OutflowBoundary.h  Output.cpp  Output.h  ReflectBoundary.cpp  ReflectBoundary.h  Vector3D.cpp  Vector3D.h  global_definitions.h  is_boundary_condition.h  main.cpp  morton_order.h
